--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="darkGray">#FF1A1A1A</color>
     <color name="blueGray">#FF667085</color>
     <color name="gray">#FF404040</color>
+    <color name="inactiveGray">#332A1246</color>
 </resources>
