--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Widget.DriveNextApp.Button" parent="Widget.Material3.Button">
-        <item name="android:backgroundTint">@color/violet</item>
+        <item name="android:backgroundTint">@color/button_background</item>
         <item name="android:textColor">@color/white</item>
         <item name="cornerRadius">8dp</item>
     </style>
